added 'collest person'

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="intro">
         <div class="intro-header">
                 <!-- <img src="file:///Users/ericrichins/Desktop/DSC_0984%202.jpg" alt="Me and Michelle" width="178px" height="151px"> -->
-            <h1>Eric Richins</h1>
+            <h1>Eric Richins is the coolest person</h1>
         </div>
                 
             <h3>About Me</h3>
