Updated Cards to WTA project files

--- a/index.html
+++ b/index.html
@@ -48,48 +48,48 @@
             <h4>Websites I've built in the past</h4>              
         </div>
         <div class="website-cards">
-            <div class="card" onclick="window.open('http://www.halfordhoops.com', '_blank');" style="cursor: pointer;">
+            <div class="card" onclick="window.open('https://sleepy-shannon-497d4d.netlify.com', '_blank');" style="cursor: pointer;">
                 <div class="top">
-                    <img src="file:///Users/ericrichins/Downloads/halfordhoopscontent/IMG_2305.PNG" alt="Halford Hoops" width="140px" height="110px">
+                    <img src="assets/baby pic.jpg" alt="Create a baby...name" width="140px" height="110px">
                 </div>
                 <div class="middle">
-                    <p>Halford Hoops is a basketball training website. Check out the different products associated with this awesome company!</p>
+                    <p>Don't fight with your spouse on your baby names. Let fate decide for you!</p>
                 </div>
                 <div class="bottom">
                     <!-- <a href="https://www.halfordhoops.com" target="_blank">Halford Hoops</a> -->
                 </div>
             </div>
-            <div class="card" onclick="window.open('http://www.richinsinsurance.com', '_blank');" style="cursor: pointer;">
+            <div class="card" onclick="window.open('https://keen-archimedes-5c00d8.netlify.com', '_blank');" style="cursor: pointer;">
                 <div class="top">
-                    <img src= "file:///Users/ericrichins/Downloads/Richins%20Insurance.png" alt="Richins Insurance" width="203px" height="114px">
+                    <img src= "assets/america.jpeg" alt="'murica" width="203px" height="114px">
                 </div>
                 <div class="middle">
-                    <p>Interested in learning more about life insurance?</p>
+                    <p>America. 'nuff said</p>
                 </div>    
                 <div class="bottom">
-                    <a href="https://www.richinsinsurance.com" target="_blank">Richins Insurance</a>
+                    <a href="https://keen-archimedes-5c00d8.netlify.com" target="_blank">'murica</a>
                 </div>
             </div>
-            <div class="card" onclick="window.open('http://www.halfordhoops.com', '_blank');" style="cursor: pointer;">
+            <div class="card" onclick="window.open('https://jovial-rosalind-73f6b0.netlify.com', '_blank');" style="cursor: pointer;">
                     <div class="top">
-                        <img src= "file:///Users/ericrichins/Downloads/Richins%20Insurance.png" alt="Richins Insurance" width="203px" height="114px">
+                        <img src= "assets/fizz buzz.png" alt="Fizz Buzz" width="203px" height="114px">
                     </div>
                     <div class="middle">
-                        <p>Interested in learning more about life insurance?</p>
+                        <p>Fizz Buzz...how fun!</p>
                     </div>    
                     <div class="bottom">
-                        <a href="https://www.richinsinsurance.com" target="_blank">Richins Insurance</a>
+                        <a href="https://jovial-rosalind-73f6b0.netlify.com" target="_blank">Fizz Buzz</a>
                     </div>
             </div>
-            <div class="card" onclick="window.open('http://www.halfordhoops.com', '_blank');" style="cursor: pointer;">
+            <div class="card" onclick="window.open('https://hardcore-shirley-6c774b.netlify.com', '_blank');" style="cursor: pointer;">
                     <div class="top">
-                        <img src= "file:///Users/ericrichins/Downloads/Richins%20Insurance.png" alt="Richins Insurance" width="203px" height="114px">
+                        <img src= "file:///Users/ericrichins/Downloads/Richins%20Insurance.png" alt="Pseudo Company" width="203px" height="114px">
                     </div>
                     <div class="middle">
-                        <p>Interested in learning more about life insurance?</p>
+                        <p>Let's check out this company</p>
                     </div>    
                     <div class="bottom">
-                        <a href="https://www.richinsinsurance.com" target="_blank">Richins Insurance</a>
+                        <a href="https://hardcore-shirley-6c774b.netlify.com" target="_blank">Pseudo Company</a>
                     </div>
             </div>
 
